--- a/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+++ b/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
@@ -19,8 +19,8 @@
     <Optimize>false</Optimize>
     <OutputPath>..\..\bin\debug</OutputPath>
     <IntermediateOutputPath>..\..\tmp\obj\debug\sharpmake.commonplatforms</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\..\tmp\obj\Debug\Sharpmake.CommonPlatforms</BaseIntermediateOutputPath>
-    <DocumentationFile>..\..\bin\Debug\Sharpmake.CommonPlatforms.xml</DocumentationFile>
+    <BaseIntermediateOutputPath>..\..\tmp\obj\debug\sharpmake.commonplatforms</BaseIntermediateOutputPath>
+    <DocumentationFile>..\..\bin\debug\sharpmake.commonplatforms.xml</DocumentationFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -36,8 +36,8 @@
     <Optimize>true</Optimize>
     <OutputPath>..\..\bin\release</OutputPath>
     <IntermediateOutputPath>..\..\tmp\obj\release\sharpmake.commonplatforms</IntermediateOutputPath>
-    <BaseIntermediateOutputPath>..\..\tmp\obj\Release\Sharpmake.CommonPlatforms</BaseIntermediateOutputPath>
-    <DocumentationFile>..\..\bin\Release\Sharpmake.CommonPlatforms.xml</DocumentationFile>
+    <BaseIntermediateOutputPath>..\..\tmp\obj\release\sharpmake.commonplatforms</BaseIntermediateOutputPath>
+    <DocumentationFile>..\..\bin\release\sharpmake.commonplatforms.xml</DocumentationFile>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
