--- a/Sharpmake.Application/Sharpmake.Application.nuspec
+++ b/Sharpmake.Application/Sharpmake.Application.nuspec
@@ -4,9 +4,9 @@
     <id>Sharpmake</id>
   </metadata>
   <files>
-    <file src="bin\release\**" target="tools" />
-    <file src="bin\release\*.dll" target="lib/net46" />
-    <file src="bin\release\*.pdb" target="lib/net46" />
-    <file src="bin\release\*.xml" target="lib/net46" />
+    <file src="..\tmp\bin\release\sharpmake.application\**" target="tools" />
+    <file src="..\tmp\bin\release\sharpmake.application\*.dll" target="lib/net46" />
+    <file src="..\tmp\bin\release\sharpmake.application\*.pdb" target="lib/net46" />
+    <file src="..\tmp\bin\release\sharpmake.application\*.xml" target="lib/net46" />
   </files>
 </package>
