Move back all sharpmake binaries so they are output in the same directory, tmp/bin/[Optim] This will ensure that binding redirects are generated correctly and dependencies of dependencies are correctly propagated by msbuild
- Remove System.Collections.Immutable dependency
- Add dependency to NUnit3 test adapter and .net test sdk to be able to run the unit tests with dotnet in cmd line
- Bump the version numbers of all dependencies to latest
- DependencyCopyLocal has been set to None for samples and regression tests projects

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,8 +42,8 @@ jobs:
       - name: UnitTest
         if: runner.os == 'Windows'
         run: |
-          nuget install NUnit.ConsoleRunner -Version 3.4.1 -OutputDirectory tmp/pkg
-          tmp/pkg/NUnit.ConsoleRunner.3.4.1/tools/nunit3-console.exe tmp/bin/${{ matrix.configuration }}/Sharpmake.UnitTests/Sharpmake.UnitTests.dll
+          nuget install NUnit.ConsoleRunner -Version 3.12.0 -OutputDirectory tmp/pkg
+          tmp/pkg/NUnit.ConsoleRunner.3.12.0/tools/nunit3-console.exe tmp/unittests/${{ matrix.configuration }}/Sharpmake.UnitTests.dll
 
       - name: RegressionTest
         if: runner.os == 'Windows'
