Update references following dotnet Sdk change.

--- a/samples/NetCore/DotNetFrameworkHelloWorld/reference/projects/helloworldmultiframework/HelloWorldMultiFramework.vs2019.csproj
+++ b/samples/NetCore/DotNetFrameworkHelloWorld/reference/projects/helloworldmultiframework/HelloWorldMultiFramework.vs2019.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -60,9 +60,11 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
   <ItemGroup>
     <Compile Include="..\..\codebase\HelloWorldMultiFramework\Program.cs">
       <Link>Program.cs</Link>
     </Compile>
   </ItemGroup>
+  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
