--- a/samples/NetCore/DotNetMultiFrameworksHelloWorld/reference/projects/helloworldmultiframeworks/HelloWorldMultiFrameworks.vs2019.csproj
+++ b/samples/NetCore/DotNetMultiFrameworksHelloWorld/reference/projects/helloworldmultiframeworks/HelloWorldMultiFrameworks.vs2019.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -60,6 +60,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
   <ItemGroup>
     <Compile Include="..\..\codebase\HelloWorldMultiframeworks\Program.cs">
       <Link>Program.cs</Link>
@@ -74,4 +75,5 @@
       <Name>HelloWorldLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
