- Allow passing an optimisation to boostrap batch file - Update github actions to use it TODO: do the same for bootstrap.sh

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v2
 
-      - name: Bootstrap.bat
+      - name: Bootstrap.bat ${{ matrix.configuration }}
         if: runner.os == 'Windows'
         shell: cmd
-        run: bootstrap.bat
+        run: bootstrap.bat Sharpmake.Main.sharpmake.cs ${{ matrix.configuration }}
 
       - name: Bootstrap.sh
         if: runner.os != 'Windows'
