--- a/Sharpmake.Application/app.config
+++ b/Sharpmake.Application/app.config
@@ -3,5 +3,6 @@
   <runtime>
     <gcServer enabled="true"/>
     <enforceFIPSPolicy enabled="false"/>
+    <AppContextSwitchOverrides value="Switch.System.Diagnostics.IgnorePortablePDBsInStackTraces=false" />
   </runtime>
 </configuration>
