--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        configuration: [Debug, Release]
+        configuration: [debug, release]
 
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
@@ -24,10 +24,10 @@ jobs:
         shell: cmd
         run: bootstrap.bat Sharpmake.Main.sharpmake.cs ${{ matrix.configuration }}
 
-      - name: Bootstrap.sh
+      - name: Bootstrap.sh ${{ matrix.configuration }}
         if: runner.os != 'Windows'
         shell: bash
-        run: ./bootstrap.sh
+        run: ./bootstrap.sh Sharpmake.Main.sharpmake.cs ${{ matrix.configuration }}
 
       - name: CompileSharpmake.bat ${{ matrix.configuration }}
         if: runner.os == 'Windows'
