[GithubActions] Only generate mdb files in release on windows.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -41,7 +41,7 @@ jobs:
         run: ./CompileSharpmake.sh Sharpmake.sln "${{ matrix.configuration }}"
         
       - name: GenerateMdbFiles.bat
-        if: runner.os == 'Windows'
+        if: runner.os == 'Windows' && matrix.configuration == 'release'
         shell: cmd
         run: GenerateMdbFiles.bat
 
