Improve gitignore to ignore all temp directories under the codebases

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 
 # Samples and FunctionalTests generated projects
 samples/*/projects/*
-samples/HelloXCode/codebase/temp*
+samples/*/codebase/temp*
 Sharpmake.FunctionalTests/*/projects/*
 !**/reference/**/*.*
 ## Ignore Visual Studio temporary files, build results, and
