--- a/samples/ConfigureOrder/reference/projects/parentproject.vcxproj.filters
+++ b/samples/ConfigureOrder/reference/projects/parentproject.vcxproj.filters
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\codebase\main.cpp" />
-    <ClCompile Include="..\codebase\stdafx.cpp" />
+    <ClCompile Include="..\codebase\ParentProject\main.cpp" />
+    <ClCompile Include="..\codebase\ParentProject\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\codebase\stdafx.h" />
+    <ClInclude Include="..\codebase\ParentProject\stdafx.h" />
   </ItemGroup>
 </Project>
